--- a/app/src/main/res/layout/activity_cadastro_sala.xml
+++ b/app/src/main/res/layout/activity_cadastro_sala.xml
@@ -1,10 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity_cadastro_sala">
+        android:orientation="vertical"
+        tools:context=".CadastroSala">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:background="@color/corPadrao"
+            android:gravity="center"
+            android:layout_height="match_parent" android:layout_weight=".9">
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
+                android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
+                tools:text="Cadastro de Sala" android:textStyle="bold"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_weight=".1">
+        <TextView
+                android:text="Número da sala"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp" android:textStyle="bold"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText3" android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+        <TextView
+                android:text="Quantidade de poltronas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp" android:textStyle="bold"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText2" android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+    </LinearLayout>
+
+
+</LinearLayout>
