--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="corPadrao">#DC143C</color>
-    <color name="corBotaoPrimario">#B0E0E6</color>
+    <color name="corPadraoEscura">#BB0026</color>
+    <color name="corBotaoPrimario">#4DEAFF</color>
     <color name="corBotaoSecundario">#C42855</color>
+    <color name="corBranca">#FFFFFF</color>
 </resources>
