--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,6 @@
             android:layout_height="match_parent" android:layout_weight=".1">
         <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:padding="4dp"/>
+                android:layout_height="match_parent" android:padding="4dp" android:id="@+id/recycler_lista_filmes"/>
     </LinearLayout>
 </LinearLayout>
