--- a/app/src/main/res/layout/activity_cadastro_sala.xml
+++ b/app/src/main/res/layout/activity_cadastro_sala.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText3" android:layout_marginLeft="20dp"
+                android:id="@+id/edtnSala" android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
         <TextView
                 android:text="Quantidade de poltronas"
@@ -46,8 +46,21 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText2" android:layout_marginLeft="20dp"
+                android:id="@+id/edtqPoltrona" android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <Button
+                    android:text="Cadastrar"
+                    android:layout_width="0dp"
+                    android:layout_height="70dp" android:id="@+id/bcadSala"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:background="@color/corPadraoEscura"
+                    android:textColor="@color/corBranca" android:textStyle="bold"/>
+        </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
 
