--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -30,7 +30,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="368dp"
-            android:layout_height="158dp" android:layout_marginTop="8dp"
+            android:layout_height="214dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
@@ -67,23 +67,15 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/txt_senha_login"/>
+        <CheckBox
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="Administrador"
+                android:layout_width="174dp"
+                android:layout_height="31dp" tools:layout_editor_absoluteY="313dp"
+                tools:layout_editor_absoluteX="62dp" android:id="@+id/check_administrador" android:checked="false"
+        />
     </LinearLayout>
-    <Button
-            android:background="@color/corPadrao"
-            android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bt_entrar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.394" android:text="Entrar"/>
-    <CheckBox
-            android:text="Administrador"
-            android:layout_width="174dp"
-            android:layout_height="31dp" tools:layout_editor_absoluteY="332dp"
-            tools:layout_editor_absoluteX="16dp" android:id="@+id/check_administrador" android:checked="false"
-    />
     <TextView
             android:textSize="15dp"
             android:layout_width="343dp"
@@ -93,4 +85,14 @@
             app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
+    <Button
+            android:background="@color/corPadrao"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:id="@+id/bt_entrar" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.234" android:text="Entrar"/>
 </android.support.constraint.ConstraintLayout>
