--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
                 android:text="TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="362dp"
                 android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
                 tools:text="Cadastro de Usuário" android:textStyle="bold"/>
@@ -94,6 +94,10 @@
                 android:layout_height="68dp" android:id="@+id/bt_cadastrar" android:layout_marginTop="25dp"
                 android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
                 android:textColor="@color/corBranca" android:background="@color/corPadraoEscura"/>
+        <Button
+                android:text="voltar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/bt_Voltar_Cadastro"/>
     </LinearLayout>
 
 
