cadastro de filme

--- a/app/src/main/res/layout/activity_cadastro_filme.xml
+++ b/app/src/main/res/layout/activity_cadastro_filme.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText3" android:hint="Ex: Capitaum Arérica" android:layout_marginLeft="20dp"
+                android:id="@+id/titulo" android:hint="Ex: Capitaum Arérica" android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
         <TextView
                 android:text="Duração"
@@ -73,7 +73,7 @@
                 android:id="@+id/editText7" android:layout_marginLeft="20dp" android:hint="Ex: Animação"
                 android:layout_marginRight="20dp"/>
         <TextView
-                android:text="Descrição"
+                android:text="Sinopse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_marginLeft="15dp"
                 android:layout_marginTop="17dp" android:textStyle="bold"/>
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText8" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
+                android:id="@+id/sinopse" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -90,7 +90,7 @@
             <Button
                     android:text="Cadastrar"
                     android:layout_width="0dp"
-                    android:layout_height="70dp" android:id="@+id/bcadFilme"
+                    android:layout_height="70dp" android:id="@+id/btCadFilme"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:background="@color/corPadraoEscura"
