--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -97,7 +97,7 @@
         <Button
                 android:text="Cancelar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/bt_Cancelar_Cadastro"
+                android:layout_height="66dp" android:id="@+id/bt_Cancelar_Cadastro"
                 android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/corBranca" android:background="@color/corPadraoEscura"/>
