--- a/app/src/main/res/layout/activity_cadastro_filme.xml
+++ b/app/src/main/res/layout/activity_cadastro_filme.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText2" android:layout_marginLeft="20dp" android:hint="Preencha em minutos"
+                android:id="@+id/duracao" android:layout_marginLeft="20dp" android:hint="Em minutos"
                 android:layout_marginRight="20dp"/>
         <TextView
                 android:text="Classificação Etária"
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText7" android:layout_marginLeft="20dp" android:hint="Ex: Animação"
+                android:id="@+id/genero" android:layout_marginLeft="20dp" android:hint="Ex: Animação"
                 android:layout_marginRight="20dp"/>
         <TextView
                 android:text="Sinopse"
