--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Perfil">
+        tools:context=".Login">
 
     <TextView
             android:text="Cinema"
@@ -97,8 +97,8 @@
     <Button
             android:background="@color/corPadrao"
             android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="46dp"
+            android:layout_width="208dp"
+            android:layout_height="73dp"
             android:id="@+id/bt_entrar" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
