--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,107 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Login">
+        android:orientation="vertical"
+        tools:context=".Login" android:id="@+id/linearLayout7">
 
-    <TextView
-            android:text="Cinema"
-            android:textColor="#fff"
-            android:textSize="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"/>
     <LinearLayout
-            android:background="@color/corPadrao"
             android:orientation="horizontal"
-            android:layout_width="405dp"
-            android:layout_height="53dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/linearLayout2">
-        <Button
-                android:text="Voltar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/bt_voltar_login_usuario"
-                android:layout_weight="1"/>
+            android:layout_width="match_parent"
+            android:background="@color/corPadrao"
+            android:gravity="center"
+            android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
-
-                android:text="Cinema"
-                android:textColor="#fff"
-                android:textSize="24dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="8dp"
-                android:layout_width="291dp"
-                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
+                android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
+                tools:text="Cinema" android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="368dp"
-            android:layout_height="214dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.399" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:id="@+id/linearLayout3">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_weight=".1" android:id="@+id/linearLayout6"
+            android:gravity="center">
+
         <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:textSize="15dp"
                 android:text="E-mail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView13"/>
+                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp" android:textStyle="bold"/>
         <EditText
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/txt_email_login"/>
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" android:id="@+id/txt_email_login"/>
         <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:textSize="15dp"
-                android:text="Senha"
+                android:text="Duração"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView14"/>
+                android:layout_height="wrap_content" android:id="@+id/Senha" android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp" android:textStyle="bold"/>
         <EditText
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:ems="10"
-                android:id="@+id/txt_senha_login"/>
+                android:id="@+id/txt_senha_login" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"/>
         <CheckBox
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:text="Administrador"
-                android:layout_width="174dp"
-                android:layout_height="31dp" tools:layout_editor_absoluteY="313dp"
+                android:layout_width="match_parent"
+                android:layout_height="31dp"
                 tools:layout_editor_absoluteX="62dp" android:id="@+id/check_administrador" android:checked="false"
         />
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp">
+
+            <Button
+                    android:text="Voltar"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp" android:id="@+id/bt_voltar_login_usuario"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:background="@color/corCinza"
+                    android:textColor="@color/corBranca" android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout7" tools:ignore="NotSibling"/>
+            <Button
+                    android:text="Entrar"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp" android:id="@+id/bt_entrar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/linearLayout7"
+                    android:background="@color/corPadraoEscura"
+                    android:textColor="@color/corBranca" android:textStyle="bold"
+                    tools:ignore="NotSibling"/>
+        </android.support.constraint.ConstraintLayout>
     </LinearLayout>
-    <TextView
-            android:textSize="15dp"
-            android:layout_width="343dp"
-            android:layout_height="60dp"
-            android:id="@+id/textView15" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
-    <Button
-            android:background="@color/corPadrao"
-            android:textColor="#fff"
-            android:layout_width="208dp"
-            android:layout_height="73dp"
-            android:id="@+id/bt_entrar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.234" android:text="Entrar"/>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
