--- a/app/src/main/res/layout/activity_cadastro_filme.xml
+++ b/app/src/main/res/layout/activity_cadastro_filme.xml
@@ -15,11 +15,10 @@
             android:gravity="center"
             android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
-                android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
+                android:layout_height="wrap_content" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
-                tools:text="Cadastro de Filme" android:textStyle="bold"/>
+                android:textStyle="bold" android:text="Cadastro de Filme"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="vertical"
