--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -93,14 +93,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="68dp" android:id="@+id/bt_cadastrar" android:layout_marginTop="25dp"
                 android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
-                android:textColor="@color/corBranca" android:background="@color/corPadraoEscura"/>
+                android:textColor="@color/corBranca" android:backgroundTint="@color/corPadraoEscura"/>
         <Button
                 android:text="Cancelar"
                 android:layout_width="match_parent"
                 android:layout_height="66dp" android:id="@+id/bt_Cancelar_Cadastro"
                 android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
                 android:layout_marginTop="15dp"
-                android:textColor="@color/corBranca" android:background="@color/corPadraoEscura"/>
+                android:textColor="@color/corBranca" android:backgroundTint="@color/corPadraoEscura"/>
     </LinearLayout>
 
 
