--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -2,6 +2,7 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -15,7 +16,7 @@
             android:gravity="center"
             android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
-                android:text="TextView"
+                android:text="Cadastro de Usuário"
                 android:layout_width="362dp"
                 android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
@@ -88,19 +89,27 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
 
-        <Button
-                android:text="Cadastrar"
+        <android.support.constraint.ConstraintLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="68dp" android:id="@+id/bt_cadastrar" android:layout_marginTop="25dp"
-                android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
-                android:textColor="@color/corBranca" android:backgroundTint="@color/corPadraoEscura"/>
-        <Button
-                android:text="Cancelar"
-                android:layout_width="match_parent"
-                android:layout_height="66dp" android:id="@+id/bt_Cancelar_Cadastro"
-                android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:textStyle="bold"
-                android:layout_marginTop="15dp"
-                android:textColor="@color/corBranca" android:backgroundTint="@color/corPadraoEscura"/>
+                android:layout_height="match_parent">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    app:layout_constraintBottom_toBottomOf="parent">
+                <Button
+                        android:text="Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:id="@+id/bt_Cancelar_Cadastro"
+                        android:backgroundTint="@color/corCinza" android:layout_weight="1" tools:text="CANCELAR"/>
+                <Button
+                        android:text="Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:id="@+id/bt_cadastrar" android:layout_weight="1"
+                        android:backgroundTint="@color/corPadraoEscura" tools:text="cadastrar"/>
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
 
