--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -15,7 +15,7 @@
             android:gravity="center"
             android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
-                android:text="TextView"
+                android:text="Cinema"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
