--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
+        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Perfil" android:id="@+id/constraint_perfil">
+        tools:context=".Perfil">
+
     <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="406dp"
+            android:layout_width="match_parent"
             android:background="@color/corPadrao"
             android:gravity="center"
-            android:layout_height="67dp" android:layout_weight=".9"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="244dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.545"
-            app:layout_constraintVertical_bias="0.0" android:id="@+id/linearLayout">
+            android:layout_height="match_parent" android:layout_weight=".9">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_weight="1"
+                android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
+                android:textStyle="bold" android:text="Menu"/>
         <Button
                 android:text="Sair"
-                android:layout_width="101dp"
-                android:layout_height="wrap_content" android:id="@+id/bt_sair" android:layout_weight="1"/>
-        <TextView
-                android:text="TextView"
-                android:layout_width="362dp"
-                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
-                android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
-                tools:text="Cadastro de Usuário" android:textStyle="bold"/>
+                android:layout_width="100dp"
+                android:layout_height="match_parent" android:id="@+id/bt_sair"
+                android:backgroundTint="@color/corPadraoEscura"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
+                android:layout_marginTop="4dp" android:textColor="@android:color/white"/>
     </LinearLayout>
-    <Button
-            android:text="Button"
-            android:layout_width="208dp"
-            android:layout_height="72dp"
-            android:id="@+id/bt_cadastrar_usuario_perfil" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintVertical_bias="0.414"
-            tools:visibility="invisible"/>
-    <Button
-            android:text="Cadastrar Filme"
-            android:layout_width="211dp"
-            android:layout_height="68dp"
-            android:id="@+id/bt_cadastrar_filme_perfil" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="0.175"/>
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:gravity="center" android:layout_height="match_parent" android:layout_weight=".1"
+            android:id="@+id/linearLayout6">
+
+        <Button
+                android:text="cadastrar filme"
+                android:layout_width="300dp"
+                android:layout_height="70dp" android:id="@+id/bt_cadastrar_filme_perfil"
+                android:backgroundTint="@color/corPadrao" android:textColor="@android:color/white"
+                android:textStyle="bold"/>
+        <Button
+                android:text="cadastrar usuário"
+                android:layout_width="300dp"
+                android:layout_height="70dp" android:id="@+id/bt_cadastrar_usuario_perfil"
+                android:backgroundTint="@color/corPadrao" android:layout_marginTop="30dp"
+                android:textColor="@android:color/white" android:textStyle="bold"/>
+    </LinearLayout>
+</LinearLayout>
