--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
-                    android:layout_marginTop="4dp"/>
+                    android:layout_marginTop="4dp" android:textStyle="bold" android:textColor="@android:color/white"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <LinearLayout
