--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -27,12 +27,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_weight=".1">
         <TextView
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:id="@+id/txt_msg"
-
-                android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="15dp"/>
-        <TextView
                 android:text="Nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginLeft="15dp"
@@ -99,15 +93,15 @@
                     android:layout_height="70dp"
                     app:layout_constraintBottom_toBottomOf="parent">
                 <Button
-                        android:text="Button"
+                        android:text="CANCELAR"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" android:id="@+id/bt_Cancelar_Cadastro"
-                        android:backgroundTint="@color/corCinza" android:layout_weight="1" tools:text="CANCELAR"/>
+                        android:background="@color/corCinza" android:layout_weight="1" tools:text="CANCELAR"/>
                 <Button
-                        android:text="Button"
+                        android:text="CADASTRAR"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" android:id="@+id/bt_cadastrar" android:layout_weight="1"
-                        android:backgroundTint="@color/corPadraoEscura" tools:text="cadastrar"/>
+                        android:background="@color/corPadraoEscura" tools:text="CADASTRAR"/>
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
