--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".Login" android:id="@+id/linearLayout7">
+        tools:context=".Login"
+        android:id="@+id/linearLayout7">
 
     <LinearLayout
             android:orientation="horizontal"
