--- a/app/src/main/res/layout/panel_lista_filme.xml
+++ b/app/src/main/res/layout/panel_lista_filme.xml
@@ -18,7 +18,7 @@
                     android:layout_height="match_parent">
                 <android.support.v7.widget.CardView
                         android:layout_width="130dp"
-                        android:layout_height="match_parent" app:cardCornerRadius="5dp">
+                        android:layout_height="match_parent">
                     <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
@@ -38,16 +38,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" android:id="@+id/lbl_lista_filme_titulo"
                             android:layout_weight=".1" android:textAlignment="center" android:textStyle="bold"
+                            android:layout_marginLeft="4dp"
                             android:textColor="@android:color/background_dark" android:layout_margin="4dp"/>
                     <TextView
                             android:text="Horários:"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
                             android:layout_weight=".3" android:textColor="@android:color/background_dark"
                             android:layout_margin="4dp" android:id="@+id/lbl_lista_filme_horarios"/>
                     <TextView
                             android:text="Sinopse:"
                             android:layout_width="match_parent"
+                            android:layout_marginLeft="4dp"
                             android:layout_height="wrap_content" android:id="@+id/lbl_lista_filme_sinopse"
                             android:layout_weight=".6" android:textColor="@android:color/background_dark"
                             android:layout_margin="4dp"/>
