--- a/app/src/main/res/layout/activity_gerencia.xml
+++ b/app/src/main/res/layout/activity_gerencia.xml
@@ -42,22 +42,22 @@
                 android:src="@drawable/movie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/imageView2" android:layout_weight="1"
-                android:padding="10"/>
+                android:padding="10dp"/>
         <ImageView
                 android:src="@drawable/session"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/imageView3" android:layout_weight="1"
-                android:padding="18"/>
+                android:padding="18dp"/>
         <ImageView
                 android:src="@drawable/calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/imageView4" android:layout_weight="1"
-                android:padding="18"/>
+                android:padding="18dp"/>
         <ImageView
                 android:src="@drawable/user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/imageView5" android:layout_weight="1"
-                android:padding="15"/>
+                android:padding="15dp"/>
     </LinearLayout>
 
 </LinearLayout>
